Reapply "Fix product card image hover overlap effect"
This reverts commit 59597071c2dfce8594dbb0d388660ff515f71e2e.

--- a/assets/main.css
+++ b/assets/main.css
@@ -1178,7 +1178,7 @@ button[disabled] {
 @media (hover: hover) {
   .card:has(.card__img--hover):hover .card__img,
   .card:has(.card__img--hover):hover .card__video {
-    transition: opacity 0.2s ease-out 0.2s;
+    transition: opacity 0.3s ease-out;
     opacity: 0;
   }
 }
